hard-gists/1920535/run.log
=== Docker Run Log for 1920535 ===
Started at: Mi 29. Okt 12:34:17 CET 2025

[2025-10-29 12:34:17] START: Running container for 1920535
[2025-10-29 12:34:17] SUCCESS: Container e8ea50154382c3057f46a62d2ea14770075af6fbda7d0611f56109baae4a42bc started for 1920535
=== Container logs for 1920535 ===
  File "/snippet.py", line 19
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1920535 ===
[2025-10-29 12:34:19] INFO: Container e8ea50154382c3057f46a62d2ea14770075af6fbda7d0611f56109baae4a42bc has stopped
